Fixed overflow x issue

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body,
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   min-height: 100%;
+  overflow-x: hidden;
 
 }
 
